Consume
