# Prova/controllers/ProvaService.js
@@ -1,33 +1,0 @@
-'use strict';
-
-exports.getProva = function(args, res, next) {
-  /**
-   * parameters expected in the args:
-  **/
-    var examples = {};
-    if(Object.keys(examples).length > 0) {
-    res.setHeader('Content-Type', 'application/json');
-    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
-  }
-  else {
-    res.end();
-  }
-  
-}
-
-exports.postProva = function(args, res, next) {
-  /**
-   * parameters expected in the args:
-  * body (Prova)
-  **/
-    var examples = {};
-    if(Object.keys(examples).length > 0) {
-    res.setHeader('Content-Type', 'application/json');
-    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
-  }
-  else {
-    res.end();
-  }
-  
-}
-
